--- a/all_about_me.html
+++ b/all_about_me.html
@@ -56,18 +56,56 @@
 
 <!--Footer-->
 <footer id="how_to_contact_me">
+  <footer class = "text-center">
+<div class="footer-above">
 <div class="container">
+  <div class="row">
+    <div class="footer-col col-md-4">
+      <h3>Location</h3>
+      <p> 17 Christiana Drive
+        <br>Newark, DE 19717</p>
+    </div>
+    <div class="footer-col col-md-4">
+      <h3>Around the Web</h3>
+      <ul class="list-inline">
+        <li class="list-inline-item">
+          <a class="btn-social btn-outline" href="#">
+            <i class="fa fa-fw fa-facebook"></i>
+          </a>
+        </li>
 <ul class="fa-ul">
 <a class ="btn-social btn-outline" href = "https://github.com/chrisni123/review">
   <li><i class="fa fa-github"></i>About-me</li>
 </a>
-<b class ="btn-social btn-outline" href = "https://www.linkedin.com/in/christine-ni-278a10a6/?trk=nav_responsive_tab_profile_pic">
-</b>
-<li><i class="fa fa-slack"></i> Slack~~~~~</li>
 </ul>
-</div>
-</footer>
-<i class="fa fa-address-book" aria-hidden="true"></i>
+<li class="list-inline-item">
+  <a class="btn-social btn-outline" href="#">
+    <i class="fa fa-fw fa-linkedin" href = "https://www.linkedin.com/in/christine-ni-278a10a6/?trk=nav_responsive_tab_profile_pic"></i>
+  </a>
+                <li class="list-inline-item">
+                  <a class="btn-social btn-outline" href="#">
+                    <i class="fa fa-fw fa-google-plus"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a class="btn-social btn-outline" href="#">
+                    <i class="fa fa-fw fa-twitter"></i>
+                  </a>
+                </li>
 
+                </li>
+                <li class="list-inline-item">
+                  <a class="btn-social btn-outline" href="#">
+                    <i class="fa fa-fw fa-dribbble"></i>
+                  </a>
+                </li>
+              </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  </footer>
+<i class="fa fa-address-book" aria-hidden="true"></i>
+</footer>
 </body>
 </html>
